--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <button>inicio</button>
-    <button>login</button>
-    <button>Cadastro</button>
-    <button>Configurações</button>
+    <button onclick="alterarConteudo('inicio')">inicio</button>
+    <button onclick="alterarConteudo('login')">login</button>
+    <button onclick="alterarConteudo('cadastro')">Cadastro</button>
+    <button onclick="alterarConteudo('Configurações')">Configurações</button>
     <main id="conteudo"></main>
 
     <script src="/js/cadastro.js"></script>
     <script src="/js/config.js"></script>
     <script src="/js/inicio.js"></script>
     <script src="js/login.js"></script>
+    <script src="/js/router.js"></script>
 </body>
 </html>
